# AppleBot

./: .gitignore  bot.py  gamble.py  mkdocs.yml  more_gambling.py  pyproject.toml  pyvenv.cfg  readme.md
Scripts/: activate  activate.bat
docs/: index.md
docs/stylesheets/: extra.css
logs/: .gitignore
